--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pretty_qr_code: ^3.3.0
   share_plus: ^10.0.2
   google_mlkit_text_recognition: ^0.13.1
+  dotted_line: ^3.2.2
 
 
 
